fix java 8 compile bug